adding and changing lines, change in typography

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
             <div class="title-bar show-for-small-only" >
                 <div class="title-bar-title logo">
-                    <a href="#" > <span class="" style="font-weight:500"> image</span>mag<span style="font-weight:300">nif</span>ic</a>
+                    <a href="index.html" >image<span>magnific</span></a>
                 </div>
                 <!-- <div class="title-bar-right">Illustratie studio    </div> -->
             </div>
@@ -34,13 +34,13 @@
             <div class="grid-container">
                 <div class="top-bar hide-for-small-only">
                     <div class="top-bar-title logo">
-                            <a class="" href="#"> <span class="" style="font-weight:500"> image</span>mag<span style="font-weight:300">nif</span>ic</a>
+                            <a class="" href="index.html"> image<span>magnific</span></a>
                     </div>
                     <div class="top-bar-right">
                         <ul class=" small-horizontal menu" >
 
                         <li>
-                            <a class="" href="#"><span class="" >Werk
+                            <a class="" href="werk.html"><span class="" >Werk
                             </span> </a>
                         </li>
                         <li><a href="#"><span class="italic">Studio</span></a></li>
@@ -72,15 +72,15 @@
             </div>
 
             <div class="grid-x grid-padding-x">
-                <div class="small-12 cell tagline">
+                <div class="small-12 cell hoofdkop omhoog">
                         <!-- <h1><span class="">Uw <span class="">eigen</span> gezicht</span></h1> -->
 
-                        <h1><span class="">illustraties</span></h1>
+                        <h1>word <span class="">magnific</span></h1>
                         <!-- <h2 class="">voor een <span class="">unieke visuele</span> identiteit</h2> -->
 
-                        <h2 class="">Wij zijn imagemagnific</h2>
-                        <p>Wij maken illustraties in verschillende stijlen. Voor een unieke identiteit.</p>
-                        <p>De illustraties kunnen groot zijn of klein, voor allerlei toepassingen, zoals header, hero, banner of icoon. </p>
+                        <h2 class=""></h2>
+                        <p>Onze studio maakt illustraties voor een unieke online identiteit.</p>
+                        <p>Zowel groot als klein, voor allerlei toepassingen, zoals header, hero, banner of icoon. </p>
 
                         <!-- <h2>Wij dragen bij aan een <span>unieke visuele identiteit</span></h2> -->
 
@@ -230,7 +230,7 @@
         <footer class="footer">
             <div class="footer-top grid-x ">
                 <div class="medium-4 cell ">
-                    <h4 class="footer-name">Wij zijn imagemagnific</h4>
+                    <h3 class="">Wij zijn imagemagnific</h3>
                     <p>Wij maken illustraties in verschillende stijlen. Voor een unieke identiteit.</p>
                     <a href="#" class="button">Meer weten?
                         </a>
@@ -238,17 +238,18 @@
 
                 </div>
                 <div class="medium-4 medium-offset-1 cell ">
-                        <h4 class="footer-name">Onze missie</h4>
+                        <h3 class="">Onze missie</h3>
                         <p>De eerste indruk kun je maar één keer maken. Met onze illustraties willen wij uw website of app een bijzondere en speciale uitstraling geven. </p>
 
 
                     </div>
 
                 <div class="small-menu small-12 cell">
-                    <p>&copy; 2018 imagemagnific</p>
+                    <!-- <p>&copy; 2018 imagemagnific</p> -->
                     <ul class="menu horizontal footer-top-links">
+                        <li>&copy; 2018 imagemagnific</li>
                         <li><a href="#">Privacy Policy</a></li>
-                        <li><a href="#">Sitemap</a></li>
+                        <li class="hide-for-small-only"><a href="#">Contact</a></li>
                         <li><a href="#"><i class="fab fa-linkedin" aria-hidden="true"></i></a></li>
                         <li><a href="#"><i class="fab fa-facebook-square" aria-hidden="true"></i></a></li>
                     <li><a href="#"><i class="fab fa-twitter-square" aria-hidden="true"></i></a></li>
@@ -265,9 +266,9 @@
                     <div class="cell">
                         <ul class="menu footer-bottom-links">
 
-                            <li><a class="active" href="#">Werk</a></li>
-                            <li><a href="#">Studio</a></li>
-                            <li><a href="#">Contact</a></li>
+                            <li><a class="" href="werk.html">Werk</a></li>
+                            <li><a href="studio.html">Studio</a></li>
+                            <li><a href="contact.html">Contact</a></li>
                         </ul>
                     </div>
                 </div>
