--- a/stadinwater.html
+++ b/stadinwater.html
@@ -20,36 +20,38 @@
 
 
  <!-- Responsive Sticky Menu -->
+ <div data-sticky-container>
+        <div data-sticky data-options="marginTop:0;">
 
-        <div data-sticky-container>
-            <div data-sticky data-options="marginTop:0;">
-
-                    <div class="title-bar" data-responsive-toggle="example-menu" data-hide-for="medium">
-                            <div class="title-bar-title logo">
-                                    <span class="" style="font-weight:500"> image</span>mag<span style="font-weight:300">nif</span>ic
-                            </div>
-                          <div class="title-bar-right">
-                        <button class="menu-icon" type="button" data-toggle="example-menu"></button> </div>
-
-                      </div>
-
-                <div class="grid-container">
-                <div class="top-bar align-right" id="example-menu">
-                    <ul class="vertical  medium-horizontal dropdown menu align-center" data-responsive-menu="accordion medium-dropdown">
-                    <li class="logo show-for-medium" ><a href="#" >  <span class="" style="font-weight:500"> image</span>mag<span style="font-weight:300">nif</span>ic</a> </li>
-                    <li>
-                        <a href="#"><span class="extrabold" >Illustraties
-                        </span> </a>
-                    </li>
-                    <li><a href="#"><span class="italic"> Waarom</span></a></li>
-                    <!-- <li><a href="#"></a></li> -->
-                    <li><a href="#"><span class="bold">Contact</span></a></li>
-                    </ul>
+            <div class="title-bar show-for-small-only" >
+                <div class="title-bar-title logo">
+                    <a href="index.html" >image<span>magnific</span></a>
                 </div>
-                </div>
-
+                <!-- <div class="title-bar-right">Illustratie studio    </div> -->
             </div>
-          </div>
+
+            <div class="grid-container">
+                <div class="top-bar hide-for-small-only">
+                    <div class="top-bar-title logo">
+                            <a class="" href="index.html"> image<span>magnific</span></a>
+                    </div>
+                    <div class="top-bar-right">
+                        <ul class=" small-horizontal menu" >
+
+                        <li>
+                            <a class="active" href="werk.html"><span class="" >Werk
+                            </span> </a>
+                        </li>
+                        <li><a href="#"><span class="italic">Studio</span></a></li>
+                        <!-- <li><a href="#"></a></li> -->
+                        <li><a href="#"><span class="">Contact</span></a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </div>
 
 
  <!-- end Responsive Sticky Menu -->
@@ -96,7 +98,7 @@
                             <a class="button previous-project" href="index.html" >Vorige project
                             <br>
                             </a><a class=" button next-project" href="index.html">Volgende project</a>
-                            <a href="index.html#main-content-section" class="button close-project">Naar overzicht</a>
+                            <a href="werk.html" class="button close-project">Naar overzicht</a>
 
                         </div>
 
@@ -110,28 +112,35 @@
 
 
         <footer class="footer">
-                <div class="footer-top grid-x hide-for-small-only">
-                    <div class="medium-6 cell ">
-                        <h4 class="footer-name">imagemagnific</h4>
-                        <p>Wij maken illustraties voor een unieke identiteit. </p>
-                        <ul class="menu footer-menu-social simple">
-                        <li><a href="#"><i class="fab fa-linkedin" aria-hidden="true"></i></a></li>
-                        <li><a href="#"><i class="fab fa-facebook-square" aria-hidden="true"></i></a></li>
+                <div class="footer-top grid-x ">
+                    <div class="medium-4 cell ">
+                        <h3 class="">Wij zijn imagemagnific</h3>
+                        <p>Wij maken illustraties in verschillende stijlen. Voor een unieke identiteit.</p>
+                        <a href="#" class="button">Meer weten?
+                            </a>
+
+
+                    </div>
+                    <div class="medium-4 medium-offset-1 cell ">
+                            <h3 class="">Onze missie</h3>
+                            <p>De eerste indruk kun je maar één keer maken. Met onze illustraties willen wij uw website of app een bijzondere en speciale uitstraling geven. </p>
+
+
+                        </div>
+
+                    <div class="small-menu small-12 cell">
+                        <!-- <p>&copy; 2018 imagemagnific</p> -->
+                        <ul class="menu horizontal footer-top-links">
+                            <li>&copy; 2018 imagemagnific</li>
+                            <li><a href="#">Privacy Policy</a></li>
+                            <li class="hide-for-small-only"><a href="#">Contact</a></li>
+                            <li><a href="#"><i class="fab fa-linkedin" aria-hidden="true"></i></a></li>
+                            <li><a href="#"><i class="fab fa-facebook-square" aria-hidden="true"></i></a></li>
                         <li><a href="#"><i class="fab fa-twitter-square" aria-hidden="true"></i></a></li>
+
                         </ul>
                     </div>
-                    <div class="auto medium-offset-1 cell ">
-                        <h4 class="footer-title">Contact Info</h4>
 
-                        <div class="footer-block">
-                        <i class="fas fa-phone" aria-hidden="true"></i>
-                        <p>1 (800) 555-5555</p>
-                        </div>
-                        <div class="footer-block">
-                        <i class="fas fa-envelope" aria-hidden="true"></i>
-                        <p>yetirules@fakeemail.com</p>
-                        </div>
-                    </div>
 
                 </div>
 
@@ -139,12 +148,12 @@
                 <div class="footer-bottom show-for-small-only">
                     <div class="grid-x align-middle">
                         <div class="cell">
-                        <ul class="menu footer-bottom-links">
+                            <ul class="menu footer-bottom-links">
 
-                            <li><a class="active" href="#">Werk</a></li>
-                            <li><a href="#">Diensten</a></li>
-                            <li><a href="#">Contact</a></li>
-                        </ul>
+                                <li><a class="" href="werk.html">Werk</a></li>
+                                <li><a href="studio.html">Studio</a></li>
+                                <li><a href="contact.html">Contact</a></li>
+                            </ul>
                         </div>
                     </div>
                 </div>
