--- a/werk.html
+++ b/werk.html
@@ -26,7 +26,7 @@
 
             <div class="title-bar show-for-small-only" >
                 <div class="title-bar-title logo">
-                    <a href="index.html" > <span class="" style="font-weight:500"> image</span>mag<span style="font-weight:300">nif</span>ic</a>
+                    <a href="index.html" >image<span>magnific</span></a>
                 </div>
                 <!-- <div class="title-bar-right">Illustratie studio    </div> -->
             </div>
@@ -34,13 +34,13 @@
             <div class="grid-container">
                 <div class="top-bar hide-for-small-only">
                     <div class="top-bar-title logo">
-                            <a class="" href="index.html"> <span class="" style="font-weight:500"> image</span>mag<span style="font-weight:300">nif</span>ic</a>
+                            <a class="" href="index.html"> image<span>magnific</span></a>
                     </div>
                     <div class="top-bar-right">
                         <ul class=" small-horizontal menu" >
 
                         <li>
-                            <a class="active" href="#"><span class="" >Werk
+                            <a class="active" href="werk.html"><span class="" >Werk
                             </span> </a>
                         </li>
                         <li><a href="#"><span class="italic">Studio</span></a></li>
@@ -64,7 +64,7 @@
 
 
             <div class="grid-x grid-padding-x">
-                <div class="small-12 cell overzicht">
+                <div class="small-12 cell hoofdkop">
                         <!-- <h1><span class="">Uw <span class="">eigen</span> gezicht</span></h1> -->
 
                         <h1>Al ons werk</h1>
@@ -79,32 +79,25 @@
 
             <div class="small-12  portfolio">
                 <div class="masonry-css">
-                    <div class="masonry-css-item">
+                        <div class="masonry-css-item">
 
-                        <figure class="">
-                            <a class="" href="filmfabriek1.html">
-                                    <img src="img/FilmfabriekDef.jpg" class="" height="" width="" alt="">
-                                    <figcaption class="masonry-css-item__overlay">
-                                        <div class="info-panel info-panel--blue">
-                                            <header class="info-panel__header">
-                                                De Filmfabriek
-                                            </header>
-                                            <div class="info-panel__content">
-                                            <span class="info">Eigen opdracht</span>
+                                <figure class="tile tile--left">
+                                    <a class="" href="filmfabriek1.html">
+                                        <img src="img/FilmfabriekDef.jpg" class="" height="" width="" alt="">
+                                        <figcaption class="tile__overlay">
+                                            <div class="info-panel info-panel--blue">
+                                                <header class="info-panel__header">
+                                                    De Filmfabriek
+                                                </header>
+                                                <div class="info-panel__content">
+                                                <span class="info">Eigen opdracht</span>
+                                                </div>
                                             </div>
-                                        </div>
-                                    </figcaption>
+                                        </figcaption>
+                                    </a>
+                                </figure>
+                            </div>
 
-                                    <!-- <span class="inner" style="background-color:#27599c;">
-                                            <span class="helper"></span>
-                                            <span class="info">
-                                            <h3>De Filmfabriek</h3>
-                                            <p>Eigen opdracht</p>
-                                            </span>
-                                        </span> -->
-                            </a>
-                        </figure>
-                    </div>
 
                     <div class="masonry-css-item">
                             <img src="img/duikboot.jpg" class="" height="" width="" alt="">
@@ -112,17 +105,22 @@
 
                     <!--doorklik -->
                     <div class="masonry-css-item">
-                        <a href="stadskyline.html" class="">
-                            <img src="img/Stad01Def.jpg" class="" height="" width="" alt="">
-                            <span class="inner" style="background-color:#443153;">
-                                    <span class="helper"></span>
-                                    <span class="info">
-                                    <h3>Stad skyline</h3>
-                                    <p>Eigen opdracht</p>
-                                    </span>
-                                </span>
-                        </a>
-                    </div>
+                            <figure class="tile tile--bottom">
+                                <a class="" href="stadskyline.html">
+                                    <img src="img/Stad01Def.jpg" class="" height="" width="" alt="">
+                                    <figcaption class="tile__overlay">
+                                        <div class="info-panel info-panel--purple">
+                                            <header class="info-panel__header">
+                                                Stad skyline
+                                            </header>
+                                            <div class="info-panel__content">
+                                            <span class="info">Eigen opdracht</span>
+                                            </div>
+                                        </div>
+                                    </figcaption>
+                                </a>
+                            </figure>
+                        </div>
 
                     <div class="masonry-css-item">
                       <img src="img/rijtjeHuizen.jpg" class="" height="" width="100%" alt="">
@@ -135,18 +133,24 @@
                     </div>
 
             <!-- ddoorklik -->
-                    <div class="masonry-css-item">
-                        <a href="stadinwater.html">
-                            <img src="img/stadinwater.jpg" class="" height="" width="" alt="">
-                            <span class="inner" style="background-color:#9c509a;">
-                                <span class="helper"></span>
-                                <span class="info">
-                                <h3>Stad in water</h3>
-                                <p>Eigen opdracht</p>
-                                </span>
-                            </span>
-                        </a>
-                    </div>
+            <div class="masonry-css-item">
+                    <figure class="tile tile--top">
+                            <a class="" href="stadinwater.html">
+                                <img src="img/stadinwater.jpg" class="" height="" width="" alt="">
+                                <figcaption class="tile__overlay">
+                                    <div class="info-panel info-panel--purplered">
+                                        <header class="info-panel__header">
+                                            Stad in water
+                                        </header>
+                                        <div class="info-panel__content">
+                                        <span class="info">Eigen opdracht</span>
+                                        </div>
+                                    </div>
+                                </figcaption>
+                            </a>
+                        </figure>
+
+            </div>
                     <div class="masonry-css-item">
                         <img src="img/Stad2.jpg" class="" height="" width="" alt="">
                         </div>
@@ -155,8 +159,23 @@
                       <img src="img/Motormeisje02.jpg" class="" height="" width="" alt="">
                     </div>
 
-                     <div class="masonry-css-item">
-                      <img src="img/stad.jpg" class="" height="" width="" alt="">
+                    <div class="masonry-css-item">
+                            <figure class="tile tile--right">
+                                    <a class="" href="#">
+                                        <img src="img/stad.jpg" class="" height="" width="" alt="">
+                                        <figcaption class="tile__overlay">
+                                            <div class="info-panel info-panel--blue">
+                                                <header class="info-panel__header">
+                                                    Stad zwart-wit
+                                                </header>
+                                                <div class="info-panel__content">
+                                                <span class="info">Eigen opdracht</span>
+                                                </div>
+                                            </div>
+                                        </figcaption>
+                                    </a>
+                                </figure>
+
                     </div>
 
 
@@ -173,53 +192,53 @@
 
 
 
+            <footer class="footer">
+                    <div class="footer-top grid-x ">
+                        <div class="medium-4 cell ">
+                            <h3 class="">Wij zijn imagemagnific</h3>
+                            <p>Wij maken illustraties in verschillende stijlen. Voor een unieke identiteit.</p>
+                            <a href="#" class="button">Meer weten?
+                                </a>
 
-        <footer class="footer">
-            <div class="footer-top grid-x ">
-                <div class="medium-4 cell ">
-                    <h4 class="footer-name">Wij zijn imagemagnific</h4>
-                    <p>Wij maken illustraties in verschillende stijlen. Voor een unieke identiteit.</p>
-                    <a href="#" class="button">Meer weten?
-                        </a>
+
+                        </div>
+                        <div class="medium-4 medium-offset-1 cell ">
+                                <h3 class="">Onze missie</h3>
+                                <p>De eerste indruk kun je maar één keer maken. Met onze illustraties willen wij uw website of app een bijzondere en speciale uitstraling geven. </p>
 
 
-                </div>
-                <div class="medium-4 medium-offset-1 cell ">
-                        <h4 class="footer-name">Onze missie</h4>
-                        <p>De eerste indruk kun je maar één keer maken. Met onze illustraties willen wij uw website of app een bijzondere en speciale uitstraling geven. </p>
+                            </div>
+
+                        <div class="small-menu small-12 cell">
+                            <!-- <p>&copy; 2018 imagemagnific</p> -->
+                            <ul class="menu horizontal footer-top-links">
+                                <li>&copy; 2018 imagemagnific</li>
+                                <li><a href="#">Privacy Policy</a></li>
+                                <li class="hide-for-small-only"><a href="#">Contact</a></li>
+                                <li><a href="#"><i class="fab fa-linkedin" aria-hidden="true"></i></a></li>
+                                <li><a href="#"><i class="fab fa-facebook-square" aria-hidden="true"></i></a></li>
+                            <li><a href="#"><i class="fab fa-twitter-square" aria-hidden="true"></i></a></li>
+
+                            </ul>
+                        </div>
 
 
                     </div>
 
-                <div class="small-menu small-12 cell">
-                    <p>&copy; 2018 imagemagnific</p>
-                    <ul class="menu horizontal footer-top-links">
-                        <li><a href="#">Privacy Policy</a></li>
-                        <li><a href="#">Sitemap</a></li>
-                        <li><a href="#"><i class="fab fa-linkedin" aria-hidden="true"></i></a></li>
-                        <li><a href="#"><i class="fab fa-facebook-square" aria-hidden="true"></i></a></li>
-                    <li><a href="#"><i class="fab fa-twitter-square" aria-hidden="true"></i></a></li>
 
-                    </ul>
-                </div>
+                    <div class="footer-bottom show-for-small-only">
+                        <div class="grid-x align-middle">
+                            <div class="cell">
+                                <ul class="menu footer-bottom-links">
 
-
-            </div>
-
-
-            <div class="footer-bottom show-for-small-only">
-                <div class="grid-x align-middle">
-                    <div class="cell">
-                        <ul class="menu footer-bottom-links">
-
-                            <li><a class="active" href="#">Werk</a></li>
-                            <li><a href="#">Studio</a></li>
-                            <li><a href="#">Contact</a></li>
-                        </ul>
+                                    <li><a class="" href="werk.html">Werk</a></li>
+                                    <li><a href="studio.html">Studio</a></li>
+                                    <li><a href="contact.html">Contact</a></li>
+                                </ul>
+                            </div>
+                        </div>
                     </div>
-                </div>
-            </div>
-        </footer>
+                </footer>
 
 
 </div>
