animated images on index.html, changed images on werk.html

--- a/filmfabriek1.html
+++ b/filmfabriek1.html
@@ -70,17 +70,17 @@
                                 <div class="cell image-container">
                                         <img src="img/FilmfabriekDef.jpg">
                                     </div>
-                                    <div class="cell tekst">
+                                    <div class="cell project-content">
                                             <h3><span>De Filmfabriek</span></h3>
                                             <p>Illustratie in eigen opdracht</p>
                                         </div>
-                                        <div class="cell hide-for-landscape  tekst">
+                                        <div class="cell hide-for-landscape  project-content">
 
                                                 <p>kantel uw apparaat om de illustratie schermvullend te zien</p>
 
                                             </div>
 
-                                        <div class="cell medium-5 medium-offset-2 tekst">
+                                        <div class="cell medium-5 medium-offset-2 project-content">
                                             <h3><span>Toepassing</span></h3>
                                             <p>Hero illustratie, header  illustratie. Er kan rekening worden gehouden met tekst die eroverheen geplaatst gaat worden. </p>
                                         </div>
