--- a/stadinwater.html
+++ b/stadinwater.html
@@ -69,11 +69,11 @@
                                 <div class="cell image-container">
                                         <img src="img/stadinwater.jpg">
                                     </div>
-                                    <div class="cell tekst">
+                                    <div class="cell project-content">
                                             <h3><span>Stad in water</span></h3>
                                             <p>Illustratie in eigen opdracht</p>
                                         </div>
-                                        <div class="cell medium-5 medium-offset-4 tekst">
+                                        <div class="cell medium-5 medium-offset-4 project-content">
                                                 <h3><span>Mogelijkheden</span></h3>
                                                 <p>Hero illustratie, banner illustratie. De illustratie kan iedere gewenste kleur worden gegeven.</p>
                                                 <p>Hieronder staat een mogelijke toepassing:</p>
@@ -86,7 +86,7 @@
                                 <div class="cell medium-5 medium-offset-1  image-container">
                                         <img src="img/stad-in-water2a.jpg">
                                     </div>
-                                    <div class="cell auto tekst">
+                                    <div class="cell auto project-content">
                                             <h3><span>Toepassing:</span></h3>
                                             <p>Mobiele landingspagina voor een uitgeverij</p>
                                         </div>
