--- a/stadskyline.html
+++ b/stadskyline.html
@@ -71,17 +71,17 @@
                                 <div class="cell image-container">
                                         <img src="img/Stad01Def.jpg">
                                     </div>
-                                    <div class="cell  tekst">
+                                    <div class="cell  project-content">
                                             <h3><span>Stad skyline</span></h3>
                                             <p>Illustratie in eigen opdracht. </p>
 
                                         </div>
-                                        <div class="cell hide-for-landscape  tekst">
+                                        <div class="cell hide-for-landscape  project-content">
 
                                                 <p>kantel uw apparaat om de illustratie schermvullend te zien</p>
 
                                             </div>
-                                        <div class="cell medium-8 large-5 medium-offset-2 tekst">
+                                        <div class="cell medium-8 large-5 medium-offset-2 project-content">
                                                 <h3><span>Mogelijkheden</span></h3>
                                                 <p>Bijzonder geschikt voor hero illustraties en banners. Bij het maken van de illustratie kan rekening worden gehouden met de plaatsing van tekst of buttons. <br> Hieronder ziet u een toepassing van deze illustratie.</p>
                                             </div>
@@ -93,7 +93,7 @@
                                 <div class="cell image-container">
                                         <img src="img/stad01-skyline.jpg">
                                     </div>
-                                    <div class="cell tekst medium-4 medium-offset-1">
+                                    <div class="cell project-content medium-4 medium-offset-1">
                                             <h3><span>Toepassing:</span></h3>
                                             <p>Hero banner voor een reisbureau</p>
                                         </div>
