--- a/werk.html
+++ b/werk.html
@@ -63,22 +63,31 @@
 
 
 
-            <div class="grid-x grid-padding-x">
-                <div class="small-12 cell hoofdkop">
-                        <!-- <h1><span class="">Uw <span class="">eigen</span> gezicht</span></h1> -->
-
-                        <h1>Al ons werk</h1>
-                        <!-- <h2 class="">voor een <span class="">unieke visuele</span> identiteit</h2> -->
-
-                        <!-- <h2>Wij dragen bij aan een <span>unieke visuele identiteit</span></h2> -->
-
-
-            </div>
-
+         <div class="grid-x grid-padding-x">
 
 
             <div class="small-12  portfolio">
+
+                   <!--doorklik -->
+                   <div class="no-masonry-css-item">
+                        <figure class="tile tile--bottom">
+                            <a class="" href="stadskyline.html">
+                                <img src="img/stad01-skyline.jpg" class="" height="" width="" alt="">
+                                <figcaption class="tile__overlay">
+                                    <div class="info-panel info-panel--purple">
+                                        <header class="info-panel__header">
+                                            Stad skyline
+                                        </header>
+                                        <div class="info-panel__content">
+                                        <span class="info">Hero illustratie, banner</span>
+                                        </div>
+                                    </div>
+                                </figcaption>
+                            </a>
+                        </figure>
+                    </div>
                 <div class="masonry-css">
+
                         <div class="masonry-css-item">
 
                                 <figure class="tile tile--left">
@@ -90,7 +99,7 @@
                                                     De Filmfabriek
                                                 </header>
                                                 <div class="info-panel__content">
-                                                <span class="info">Eigen opdracht</span>
+                                                <span class="info">Hero illustratie, banner illustratie</span>
                                                 </div>
                                             </div>
                                         </figcaption>
@@ -103,47 +112,27 @@
                             <img src="img/duikboot.jpg" class="" height="" width="" alt="">
                     </div>
 
-                    <!--doorklik -->
-                    <div class="masonry-css-item">
-                            <figure class="tile tile--bottom">
-                                <a class="" href="stadskyline.html">
-                                    <img src="img/Stad01Def.jpg" class="" height="" width="" alt="">
-                                    <figcaption class="tile__overlay">
-                                        <div class="info-panel info-panel--purple">
-                                            <header class="info-panel__header">
-                                                Stad skyline
-                                            </header>
-                                            <div class="info-panel__content">
-                                            <span class="info">Eigen opdracht</span>
-                                            </div>
-                                        </div>
-                                    </figcaption>
-                                </a>
-                            </figure>
-                        </div>
 
                     <div class="masonry-css-item">
                       <img src="img/rijtjeHuizen.jpg" class="" height="" width="100%" alt="">
                     </div>
                     <div class="masonry-css-item">
-                      <img src="img/BosjesMan02.jpg" class="" height="" width="" alt="">
+                      <img src="img/stad-2-skyline.jpg" class="" height="" width="" alt="">
                     </div>
-                    <div class="masonry-css-item">
-                      <img src="img/versterker.jpg" class="" height="" width="" alt="">
-                    </div>
+
 
             <!-- ddoorklik -->
             <div class="masonry-css-item">
                     <figure class="tile tile--top">
                             <a class="" href="stadinwater.html">
-                                <img src="img/stadinwater.jpg" class="" height="" width="" alt="">
+                                <img src="img/stad-in-water2a.jpg" class="" height="" width="" alt="">
                                 <figcaption class="tile__overlay">
                                     <div class="info-panel info-panel--purplered">
                                         <header class="info-panel__header">
                                             Stad in water
                                         </header>
                                         <div class="info-panel__content">
-                                        <span class="info">Eigen opdracht</span>
+                                        <span class="info">Hero illustratie, banner illustratie</span>
                                         </div>
                                     </div>
                                 </figcaption>
@@ -153,11 +142,11 @@
             </div>
                     <div class="masonry-css-item">
                         <img src="img/Stad2.jpg" class="" height="" width="" alt="">
-                        </div>
+                    </div>
 
                     <div class="masonry-css-item">
-                      <img src="img/Motormeisje02.jpg" class="" height="" width="" alt="">
-                    </div>
+                        <img src="img/versterker.jpg" class="" height="" width="" alt="">
+                      </div>
 
                     <div class="masonry-css-item">
                             <figure class="tile tile--right">
@@ -169,7 +158,7 @@
                                                     Stad zwart-wit
                                                 </header>
                                                 <div class="info-panel__content">
-                                                <span class="info">Eigen opdracht</span>
+                                                <span class="info">Hero illustratie</span>
                                                 </div>
                                             </div>
                                         </figcaption>
@@ -231,7 +220,7 @@
                             <div class="cell">
                                 <ul class="menu footer-bottom-links">
 
-                                    <li><a class="" href="werk.html">Werk</a></li>
+                                    <li><a class="active" href="werk.html">Werk</a></li>
                                     <li><a href="studio.html">Studio</a></li>
                                     <li><a href="contact.html">Contact</a></li>
                                 </ul>
