--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 
  <!-- Responsive Sticky Menu -->
 
- <div data-sticky-container>
-        <div data-sticky data-options="marginTop:0;">
+ <!-- <div data-sticky-container> -->
+        <div class="sticking" data-sticky data-options="marginTop:0;">
 
             <div class="title-bar show-for-small-only" >
                 <div class="title-bar-title logo">
@@ -49,10 +49,10 @@
                         </ul>
                     </div>
                 </div>
+
             </div>
 
-        </div>
-    </div>
+        </div>    <!-- end .sticking -->
 
 
  <!-- end Responsive Sticky Menu -->
@@ -60,170 +60,86 @@
 
 
     <div class="grid-container">
+        <div class="intro grid-x grid-padding-x">
+            <div  class="small-12 hero-container">
+
+                <noscript><img src="img/Stad2.jpg"></noscript>
+<!-- http://www.lighthousebrewing.com/ -->
+                <svg class="contrail" height="8" width="100%"  xmlns="http://www.w3.org/2000/svg">
+                    <line class="path" x1="0" y1="0" x2="100%" y2="1" style="stroke:rgba(255,255,255,0.35);stroke-width:1" />
+                    <line class="path" x1="0" y1="1" x2="100%" y2="2" style="stroke:rgba(255,255,255,0.29);stroke-width:1" />
+
+                    <line class="path" x1="0" y1="3" x2="100%" y2="4" style="stroke:rgba(255,255,255,0.21);stroke-width:1" />
+                    <line class="path" x1="0" y1="4" x2="100%" y2="5" style="stroke:rgba(255,255,255,0.27);stroke-width:1" />
+                </svg>
+                <!-- <img src="img/vliegtuig.png" alt="" class="hero-leftToRight"> -->
+
+                <img data-interchange="[img/vliegtuig-sm.png, small], [img/vliegtuig.png, medium], [img/vliegtuig.png, large]" class="hero-leftToRight" alt="vliegtuig">
+
+
+
+                <div class="hero-skyline">
+                    <img data-interchange="[img/Stad3-sm.png, small], [img/Stad3.png, medium], [img/Stad3.png, large]" class="" alt="stad skyline">
+
+                </div>
+
+            </div>  <!-- end hero-container -->
+
+            <!-- https://www.youtube.com/watch?v=YaKHUGCwHLk
+how to create water reflection animation in after effects -->
+            <div class="boat right" >
+                <!-- <img src="boat-right.svg" alt="bootje rechts"> -->
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 81 278.36"><defs><style>
+
+                 .c-1{fill:#001c34;}.c-2{fill:#9b9b9b;}.c-3{fill:#e6ffff;}.c-4{fill:#0d1016;}.c-5{fill:#9dafaf;}.c-6{fill:#12224c;}
+
+                </style></defs><title>boot-r</title><g id="reflectie"><path class="c-1" d="M32.71,268.34v9.3a.59.59,0,1,1-1.14,0v-9.3Z" transform="translate(0.21)"/><path class="c-2" d="M32.82,158.81H21.35c-1.59,0-2.87,0-3.87-1.34,0,0-4.75-5.75-6.34-7.58H22.61c1.59,1.83,6.34,7.58,6.34,7.58C30,158.81,31.23,158.81,32.82,158.81Z" transform="translate(0.21)"/><path class="c-3" d="M72.37,149.89V154a4.79,4.79,0,0,1-4.78,4.78H32.82c-1.59,0-2.87,0-3.87-1.34,0,0-4.75-5.75-6.34-7.58Z" transform="translate(0.21)"/><rect class="c-4" x="0.21" y="149.89" width="80.66" height="1.91" rx="0.96"/><path class="c-3" d="M25.49,140.33H67.28s9,3.19,11.52,9.56H31.86Z" transform="translate(0.21)"/><path class="c-5" d="M8.77,140.33H25.64a15.3,15.3,0,0,1,6.52,9.56H2.25A15.3,15.3,0,0,1,8.77,140.33Z" transform="translate(0.21)"/><rect class="c-4" x="39.08" y="153.71" width="30.96" height="3.19" rx="1.59"/><path class="c-3" d="M34.19,269.33s31.36-28.46,31.32-107l-37.69-2L31.46,270Z" transform="translate(0.21)"/><path class="c-2" d="M33.54,160.61s6,43.93-5.48,68.64L7.37,164Z" transform="translate(0.21)"/></g>
+                <g id="boot"><path class="c-1" d="M32.71,10V.72a.59.59,0,1,0-1.14,0V10Z" transform="translate(0.21)"/><path class="c-2" d="M32.82,119.55H21.35c-1.59,0-2.87,0-3.87,1.34,0,0-4.75,5.74-6.34,7.58H22.61c1.59-1.84,6.34-7.58,6.34-7.58C30,119.55,31.23,119.55,32.82,119.55Z" transform="translate(0.21)"/><path class="c-3" d="M72.37,128.47v-4.14a4.79,4.79,0,0,0-4.78-4.78H32.82c-1.59,0-2.87,0-3.87,1.34,0,0-4.75,5.74-6.34,7.58Z" transform="translate(0.21)"/><rect class="c-4" x="0.21" y="126.56" width="80.66" height="1.91" rx="0.96"/><path class="c-3" d="M25.49,138H67.28s9-3.18,11.52-9.55H31.86Z" transform="translate(0.21)"/><path class="c-5" d="M8.77,138H25.64a15.25,15.25,0,0,0,6.52-9.55H2.25A15.25,15.25,0,0,0,8.77,138Z" transform="translate(0.21)"/><rect class="c-4" x="39.08" y="121.46" width="30.96" height="3.19" rx="1.59"/><path class="c-3" d="M34.19,9s31.36,28.46,31.32,107l-37.69,2L31.46,8.32Z" transform="translate(0.21)"/><path class="c-2" d="M33.54,117.75s6-43.93-5.48-68.64L7.37,114.34Z" transform="translate(0.21)"/></g>
+                <g id="water"><rect class="c-6" y="138.18" width="81" height="3"/></g></svg>
+
+            <!-- <object data="boat-right.svg" type="image/svg+xml"></object> -->
+            </div>
+
+            <div class="boat left">
+                <!-- <object data="boat-left.svg" type="image/svg+xml"></object> -->
+                <!-- <img src="boat-left.svg" alt="bootje links"> -->
+             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 80 304.19"><defs><style>.cls-1{fill:#12224c;}.cls-2{fill:#001c34;}.cls-3{fill:#e6ffff;}.cls-4{fill:#9b9b9b;}.cls-5{fill:#0d1016;}.cls-6{fill:#9dafaf;}</style></defs><title>boot-l</title>
+                <g id="watervlak"><path class="cls-1" d="M37.71,292.56v10.8a.68.68,0,1,1-1.32,0v-10.8Z" transform="translate(0)"/><path class="cls-1" d="M36.37,176.6v118s55.37-36.24,41.31-108Z" transform="translate(0)"/><path class="cls-1" d="M50.77,258.62l1.79,10.26a1,1,0,0,1-.69,1.17.82.82,0,0,1-1-.69l-1.79-10.27Z" transform="translate(0)"/><path class="cls-1" d="M36.37,176.6l15.3,87s-43.53-40.81-44.27-83Z" transform="translate(0)"/><path class="cls-1" d="M38.1,174.72H24.78c-1.84,0-3.32,0-4.48-1.56,0,0-5.51-6.67-7.36-8.8H26.25c1.85,2.13,7.37,8.8,7.37,8.8C34.77,174.72,36.26,174.72,38.1,174.72Z" transform="translate(0)"/><path class="cls-1" d="M65.85,164.36v4.81a5.57,5.57,0,0,1-5.55,5.55H38.1c-1.84,0-3.33,0-4.48-1.56,0,0-5.52-6.67-7.37-8.8Z" transform="translate(0)"/><rect class="cls-1" y="164.36" width="75.46" height="2.22" rx="1.11"/><path class="cls-1" d="M29.59,153.26H59.93s10.48,3.7,13.38,11.1H37Z" transform="translate(0)"/><path class="cls-1" d="M10.18,153.26H29.77a17.77,17.77,0,0,1,7.57,11.1H2.61A17.77,17.77,0,0,1,10.18,153.26Z" transform="translate(0)"/><rect class="cls-1" x="45.13" y="168.8" width="17.76" height="3.7" rx="1.85"/></g>
+
+                <g id="reflectie-2" data-name="reflectie"><g id="reflectie-3" data-name="reflectie"><path class="cls-2" d="M37.71,292.56v10.8a.68.68,0,1,1-1.32,0v-10.8Z" transform="translate(0)"/><path class="cls-3" d="M36.37,176.6v118s55.37-36.24,41.31-108Z" transform="translate(0)"/><path class="cls-2" d="M50.77,258.62l1.79,10.26a1,1,0,0,1-.69,1.17.82.82,0,0,1-1-.69l-1.79-10.27Z" transform="translate(0)"/><path class="cls-4" d="M36.37,176.6l15.3,87s-43.53-40.81-44.27-83Z" transform="translate(0)"/><path class="cls-4" d="M38.1,174.72H24.78c-1.84,0-3.32,0-4.48-1.56,0,0-5.51-6.67-7.36-8.8H26.25c1.85,2.13,7.37,8.8,7.37,8.8C34.77,174.72,36.26,174.72,38.1,174.72Z" transform="translate(0)"/><path class="cls-3" d="M65.85,164.36v4.81a5.57,5.57,0,0,1-5.55,5.55H38.1c-1.84,0-3.33,0-4.48-1.56,0,0-5.52-6.67-7.37-8.8Z" transform="translate(0)"/><rect class="cls-5" y="164.36" width="75.46" height="2.22" rx="1.11"/><path class="cls-3" d="M29.59,153.26H59.93s10.48,3.7,13.38,11.1H37Z" transform="translate(0)"/><path class="cls-6" d="M10.18,153.26H29.77a17.77,17.77,0,0,1,7.57,11.1H2.61A17.77,17.77,0,0,1,10.18,153.26Z" transform="translate(0)"/><rect class="cls-5" x="45.13" y="168.8" width="17.76" height="3.7" rx="1.85"/></g></g>
+
+               <g id="boot-2" data-name="boot"><path class="cls-2" d="M37.71,11.63V.83a.68.68,0,1,0-1.32,0v10.8Z" transform="translate(0)"/><path class="cls-3" d="M36.37,127.59V9.64s55.37,36.23,41.31,108Z" transform="translate(0)"/><path class="cls-2" d="M50.77,45.58l1.79-10.27a1,1,0,0,0-.69-1.17.82.82,0,0,0-1,.7L49.06,45.1Z" transform="translate(0)"/><path class="cls-4" d="M36.37,127.59l15.3-87s-43.53,40.8-44.27,83Z" transform="translate(0)"/><path class="cls-4" d="M38.1,129.47H24.78c-1.84,0-3.32,0-4.48,1.56,0,0-5.51,6.67-7.36,8.8H26.25c1.85-2.13,7.37-8.8,7.37-8.8C34.77,129.47,36.26,129.47,38.1,129.47Z" transform="translate(0)"/><path class="cls-3" d="M65.85,139.83V135a5.57,5.57,0,0,0-5.55-5.55H38.1c-1.84,0-3.33,0-4.48,1.56,0,0-5.52,6.67-7.37,8.8Z" transform="translate(0)"/><rect class="cls-5" y="137.61" width="75.46" height="2.22" rx="1.11"/><path class="cls-3" d="M29.59,150.93H59.93s10.48-3.7,13.38-11.1H37Z" transform="translate(0)"/><path class="cls-6" d="M10.18,150.93H29.77a17.77,17.77,0,0,0,7.57-11.1H2.61A17.77,17.77,0,0,0,10.18,150.93Z" transform="translate(0)"/><rect class="cls-5" x="45.13" y="131.69" width="17.76" height="3.7" rx="1.85"/></g>
+
+                <g id="water"><rect class="cls-1" y="150.6" width="80" height="3"/></g></svg>
+            </div>
+
+
+
+
+                <header class="hoofdkop omhoog">
+                        <h1>wees <span class="fullwidth">magnific</span></h1>
+                </header>
+
+
+
+
+
+
+
+        </div>            <!-- end intro -->
+
 
             <div class="grid-x grid-padding-x">
-                <div  class="small-12 hero-container">
-                    <div class="hero-image">
-                            <noscript><img src="img/Stad2.jpg"></noscript>
 
-                            <img data-interchange="[img/Stad2.jpg, small], [img/Stad2.jpg, medium], [img/Stad2.jpg, large]" class="hero-image" alt="illustration stad">
+                    <div class="small-12 boulevard">
+                            <p>Onze studio maakt illustraties voor een unieke online identiteit.</p>
+                            <p>Groot of klein, voor allerlei toepassingen, zoals header, hero, banner of icoon. </p>
                     </div>
-                </div>
-            </div>
-
-            <div class="grid-x grid-padding-x">
-                <div class="small-12 cell hoofdkop omhoog">
-                        <!-- <h1><span class="">Uw <span class="">eigen</span> gezicht</span></h1> -->
-
-                        <h1>word <span class="">magnific</span></h1>
-                        <!-- <h2 class="">voor een <span class="">unieke visuele</span> identiteit</h2> -->
-
-                        <h2 class=""></h2>
-                        <p>Onze studio maakt illustraties voor een unieke online identiteit.</p>
-                        <p>Zowel groot als klein, voor allerlei toepassingen, zoals header, hero, banner of icoon. </p>
-
-                        <!-- <h2>Wij dragen bij aan een <span>unieke visuele identiteit</span></h2> -->
-
-                <!-- </div>
-                <div class="bottom-content-section" data-magellan data-threshold="0"> -->
-                        <!-- <a href="#" class="button">Kijk wat wij kunnen doen
-                        </a> -->
-                  </div>
-            </div>
-
-
-
-                <!-- <div class="large-12 cell intro ">                    <h1>We bieden:</h1>
-                    <div class="grid-x grid-margin-x grid-margin-y">
-
-                                    <div class="medium-4 cell  service ">
-                                            <h3 class="" >Hero Images</h3>
-                                            <p class="">
-
-                                                Grote afbeeldingen in de header </p>
-                                                <a href="#" class="button yellow">Bekijk voorbeelden</a>
-                                    </div>
-
-                                    <div class="medium-4 cell service ">
-                                            <h3 >Banners</h3>
-                                            <p class="">
-
-                                                Zowel groot als klein</p>
-                                                <a href="#" class="button yellow">Bekijk voorbeelden</a>
-                                    </div>
-                                    <div class="medium-4 cell service  ">
-                                        <h3 class="">Kleine illustraties</h3>
-                                        <p class="">Iconen / productafbeeldingen
-
-                                            </p>
-                                            <a href="#" class="button yellow">Bekijk voorbeelden</a>
-                                    </div>
-                    </div>
-                </div>
-            </div> -->
-
-            <div class="small-12  portfolio">
-                <div class="masonry-css">
-                    <div class="masonry-css-item">
-
-                        <figure class="tile tile--left">
-                            <a class="" href="filmfabriek1.html">
-                                <img src="img/FilmfabriekDef.jpg" class="" height="" width="" alt="">
-                                <figcaption class="tile__overlay">
-                                    <div class="info-panel info-panel--blue">
-                                        <header class="info-panel__header">
-                                            De Filmfabriek
-                                        </header>
-                                        <div class="info-panel__content">
-                                        <span class="info">Eigen opdracht</span>
-                                        </div>
-                                    </div>
-                                </figcaption>
-                            </a>
-                        </figure>
-                    </div>
-
-                    <!--doorklik -->
-                    <div class="masonry-css-item">
-                        <figure class="tile tile--bottom">
-                            <a class="" href="stadskyline.html">
-                                <img src="img/Stad01Def.jpg" class="" height="" width="" alt="">
-                                <figcaption class="tile__overlay">
-                                    <div class="info-panel info-panel--purple">
-                                        <header class="info-panel__header">
-                                            Stad skyline
-                                        </header>
-                                        <div class="info-panel__content">
-                                        <span class="info">Eigen opdracht</span>
-                                        </div>
-                                    </div>
-                                </figcaption>
-                            </a>
-                        </figure>
-                    </div>
-
-
-
-
-
-            <!-- ddoorklik -->
-                    <div class="masonry-css-item">
-                            <figure class="tile tile--top">
-                                    <a class="" href="stadinwater.html">
-                                        <img src="img/stadinwater.jpg" class="" height="" width="" alt="">
-                                        <figcaption class="tile__overlay">
-                                            <div class="info-panel info-panel--purplered">
-                                                <header class="info-panel__header">
-                                                    Stad in water
-                                                </header>
-                                                <div class="info-panel__content">
-                                                <span class="info">Eigen opdracht</span>
-                                                </div>
-                                            </div>
-                                        </figcaption>
-                                    </a>
-                                </figure>
-
-                    </div>
-
-
-                    <div class="masonry-css-item">
-                            <figure class="tile tile--right">
-                                    <a class="" href="#">
-                                        <img src="img/stad.jpg" class="" height="" width="" alt="">
-                                        <figcaption class="tile__overlay">
-                                            <div class="info-panel info-panel--blue">
-                                                <header class="info-panel__header">
-                                                    Stad zwart-wit
-                                                </header>
-                                                <div class="info-panel__content">
-                                                <span class="info">Eigen opdracht</span>
-                                                </div>
-                                            </div>
-                                        </figcaption>
-                                    </a>
-                                </figure>
-
-                    </div>
-
-
-                  </div>
 
             </div>
 
 
-
-
-
-
-                    <div class=" small-12 service">
-                        <a href="werk.html" class="button">Laat alles zien
-                            </a>
-                        </div>
-
-
-
-        </div>
+        </div>       <!-- end grid-container  -->
 
 
 
